choose other image

--- a/_posts/2016-06-03-a-new-blog.md
+++ b/_posts/2016-06-03-a-new-blog.md
@@ -2,7 +2,7 @@
 layout: post
 title: BlogBores - a new hope
 subtitle: This time it will all be fine
-bigimg: /img/mijas.jpg
+bigimg: /img/tropicbeach.jpg
 ---
 
 It was the best of times. 
